Custom error controller, and handers setup and working.